ModInit fixes